alignment fixing

--- a/app/assets/stylesheets/pages/characters/_index.scss
+++ b/app/assets/stylesheets/pages/characters/_index.scss
@@ -18,12 +18,10 @@
 }
 
 .character-card {
-  // position: relative;
   transition: 0.3s;
-  width: 375px;
+  /* min-width: 301px; */
   height: 250px;
-  // background: #FFFFFF;
-  background: linear-gradient(180deg, rgba(62, 72, 87, 1) 40%, rgba(255, 255, 255, 1) 40%);
+  /* background: linear-gradient(180deg, #3e4857 40%, white 40%); */
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.15);
   border-radius: 5px 40px 40px 40px;
   margin-top: 75px;
@@ -51,7 +49,7 @@
 .avatar {
   position: absolute;
   max-width: 87px;
-  max-height: 127px;
+  max-height: 110px;
   right: 30px;
   top: 40px;
 }
@@ -69,8 +67,8 @@
   color: white;
   text-align: left;
   padding-top: 15px;
-  padding-left: 30px;
-  max-width: 265px;
+  padding-left: 20px;
+  max-width: 200px;
 }
 
 .content-body p {
